--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -1,91 +1,123 @@
-#Navbar{
-    display: flex;
-    justify-content:space-between;
-    position: fixed;
-    padding-right: 10px;
-    color: #fff;
-    background-color: black;
-    width: 100%;
-    height: 10vh;
-    position: static;
+#Navbar {
+  display: flex;
+  justify-content: space-between;
+  position: fixed;
+  padding-right: 10px;
+  padding-left: 10px;
+  color: #fff;
+  background-color: black;
+  width: 100%;
+  height: 10vh;
+  position: static;
 }
 
-#hamburger{
-  display: block;
+#setting_phone {
+  display: none;
   position: relative;
-  top: 50px;
-  left: 50px;
-  
+  width: 10vw;
+  padding-top: 2rem;
   z-index: 1;
-  
+
   -webkit-user-select: none;
   user-select: none;
 }
 
-#hamburger input{
+#setting_phone input {
   display: block;
-  width: 40px;
-  height: 32px;
+  width: 90%;
+  height: 2rem;
   position: absolute;
-  top: -7px;
-  left: -5px;
-  
+  margin: 0;
   cursor: pointer;
-  
+
   opacity: 0;
-  z-index: 2; 
-  
+  z-index: 2;
+
   -webkit-touch-callout: none;
 }
 
-#hamburger span{
+#setting_phone span {
   display: block;
-  width: 33px;
-  height: 4px;
-  margin-bottom: 5px;
+  width: 38px;
+  height: 5px;
+  margin-bottom: 8px;
   position: relative;
-  
-  background: #cdcdcd;
+
+  background: #fff;
   border-radius: 3px;
-  
+
   z-index: 1;
-  
   transform-origin: 4px 0px;
-  
-  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-              opacity 0.55s ease;
+
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
 }
 
-#hamburger span:first-child{
+#setting_phone span:first-child {
   transform-origin: 0% 0%;
 }
 
-#hamburger span:nth-last-child(2){
+#setting_phone span:nth-last-child(2) {
   transform-origin: 0% 100%;
 }
 
-#hamburger input:checked ~ span{
-    transform: rotate(-45deg) translate(-2px, -2px);
-    background: #ffffff;    
-}
-
-#hamburger input:checked ~ span:nth-last-child(3){
+#setting_phone input:checked ~ span {
   opacity: 1;
-  transform: rotate(45deg);
-  background: #ffffff;
+  transform: rotate(45deg) translate(2px, 0);
+  background: #fff;
 }
 
-#hamburger input:checked ~ span:nth-last-child(2){
-    opacity: 0;
-    transform: rotate(0deg) scale(0.2, 0.2);
+#setting_phone input:checked ~ span:nth-last-child(2) {
+  transform: rotate(-45deg) translate(2px, 0);
 }
 
-#settings{
-    display: flex;
-    justify-content:space-between;
+#setting_phone input:checked ~ span:nth-last-child(3) {
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
 }
 
-#Navbar > img, #settings> img{
-    margin: 10px;
+#menu {
+  width: 100vw;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+  background: #000;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  /* to stop flickering of text in safari */
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+}
+
+#menu li {
+  padding: 10px 0;
+  font-size: 22px;
+}
+
+#menu a {
+  text-decoration: none;
+}
+
+#setting_phone input:checked ~ ul {
+  transform: none;
+}
+
+#settings_desktop {
+  display: flex;
+  justify-content: space-between;
+}
+
+#Navbar > img,
+#settings_desktop > img {
+  margin: 10px;
+}
+
+@media (max-width: 700px) {
+  #settings_desktop {
+    display: none;
+  }
+  #setting_phone {
+    display: block;
+  }
 }
