--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,5 @@
-body{
+body {
+  min-width: 370px;
   margin: 0;
   padding: 0;
 }
@@ -10,7 +11,7 @@ body{
 
   color-scheme: light dark;
   color: #000000;
-  background-color: #ffffff;
+  background-color: #D9D9D9;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
