--- a/frontend/src/components/MemberCard/MemberCard.css
+++ b/frontend/src/components/MemberCard/MemberCard.css
@@ -1,11 +1,15 @@
-#card {
-    background-color: #fff;
-    border-radius: 30px;
-    padding: 30px;
-    box-shadow: 0 4px 10px hsla(0, 0%, 0%, 0.6);
+#memberCard {
+  background-color: #fff;
+  border-radius: 30px;
+  padding: 30px;
+  box-shadow: 0 4px 10px hsla(0, 0%, 0%, 0.6);
+}
+
+#memberCard:hover {
+  transform: scale(1.03);
 }
 
 #member {
-    display: flex;
-    gap: 20px;
+  display: flex;
+  gap: 20px;
 }
