--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -1,12 +1,13 @@
 #Navbar {
   display: flex;
   justify-content: space-between;
-  position: static;
+  position: fixed;
+  top: 0;
   color: #fff;
   background-color: black;
   width: 100%;
   height: 10vh;
-  position: static;
+  z-index: 10;
 }
 
 #setting_phone {
