--- a/frontend/src/components/ToDoList/ToDoList.css
+++ b/frontend/src/components/ToDoList/ToDoList.css
@@ -1,9 +1,9 @@
-.TeamList {
+.toDoList {
   display: block;
   margin: 5vh 10vw 0 10vw;
 }
 
-#team_settings {
+#task_settings {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -11,7 +11,7 @@
   margin-bottom: 30px;
 }
 
-#team_settings button {
+#task_settings button {
   background-color: #eeeeee;
   color: grey;
   border: none;
@@ -22,7 +22,7 @@
   padding: 5px 20px;
 }
 
-.memberList {
+.taskList {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
   gap: 15px;
